Added dependencies & plugins for testing